# termux_stt

./: .geminiignore  .gitignore  AGENTS.md  Cargo.toml  HOW_TO_USE.md  LEARNING_LOG.md  Makefile  README.md  SETUP_GUIDE.md  Transcribe_command.md  build.rs  build_script.sh  setup_termux.sh  termux_setup.md  test_select  test_select.rs
.gemini/: GEMINI.md  settings.json
antigravity_note/: Walkthrough - Data Restructuring and Library Fix.md  task- Data Restructuring and Library Fix.md
md_collection/: HOW_TO_USE.md  LEARNING_LOG.md  README.md  SETUP_GUIDE.md  cargo_clippy_log.md  computer_specification.md  implementation_plan.md  implementation_plan_lmmautoRelode.md  project_info.md  research_notes.md  task.md  task_lmmAutoRelode.md  termux_log.md  voice_instruction_for_ai.txt  walkthrough.md
src/: cli.rs  config.rs  core.rs  error.rs  lib.rs  main.rs
src/engine/: audio.rs  mod.rs  processing.rs  vosk.rs
src/ui/: cli.rs  mod.rs
